# ephemeral-roles-operator

./: Cargo.toml  README.md
src/: crdgen.rs  deployer.rs  handler.rs  lib.rs  main.rs  version.rs
src/ephemeral_roles/: mod.rs
yaml/: crd.yml  example.yml
